# kagcrawl

./: .gitignore  README.md  kagcrawl_singlefile.py  pyproject.toml
src/kagcrawl/: __init__.py  alpha.py  api.py  artifacts.py  browser.py  capabilities.py  cli.py  discussions.py  exporters.py  notebook.py  pipeline.py  resolve.py  schemas.py  thread.py
src/kagcrawl/utils/: kaggle_cli.py  links.py
tests/: test_api.py  test_artifacts.py  test_capabilities.py  test_discussions.py  test_links.py  test_notebook_parse.py  test_resolve.py  test_thread_parsing.py
