[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "kagcrawl"
version = "0.1.0"
description = "Agent-first Kaggle discussion crawler with notebook resolution"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Keith Tyser" }
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.8",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
]

[project.scripts]
kagcrawl = "kagcrawl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kagcrawl"]
